adapt for 7.x